<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#0FF0F0"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.fenger.fragmentdemo.customview.ColorTrackTextView
            android:id="@+id/rb_1"
            style="@style/tab_button_style"
            android:text="@string/main_tab" />

        <com.fenger.fragmentdemo.customview.ColorTrackTextView
            android:id="@+id/rb_2"
            style="@style/tab_button_style"
            android:text="@string/find_tab" />

        <com.fenger.fragmentdemo.customview.ColorTrackTextView
            android:id="@+id/rb_3"
            style="@style/tab_button_style"
            android:text="@string/news_tab" />

        <com.fenger.fragmentdemo.customview.ColorTrackTextView
            android:id="@+id/rb_4"
            style="@style/tab_button_style"
            android:text="@string/message_tab" />

        <com.fenger.fragmentdemo.customview.ColorTrackTextView
            android:id="@+id/rb_5"
            style="@style/tab_button_style"
            android:text="@string/life_tab" />
    </RadioGroup>

    <com.fenger.fragmentdemo.customview.MyViewPager
        android:id="@+id/main_tab"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>