<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_4" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_5" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_7" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_8" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/button_num_0" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>